--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
 }
 
 header {
-    background-color: #333;
+    /* background-color: #7d7676; */
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ00pnLqoH3GHKKbzKx4-K-EcJIyEa5nFD_kw&s');
     color: #fff;
     padding: 20px;
     text-align: center;
@@ -24,9 +25,12 @@ nav ul {
 
 nav ul li {
     display: inline;
+    transition: transform 0.3s ease-in-out;
     margin: 0 15px;
 }
-
+nav ul li:hover{
+    transform: scale(1.1);
+}
 nav ul li a {
     color: #fff;
     text-decoration: none;
@@ -49,13 +53,16 @@ h3{
     background-color: #fff;
     padding: 20px;
     width: 300px;
+    transition: transform 0.3s ease-in-out;
     align-items: center;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
     margin-left: 100px;
 }
-
+.place:hover{
+    transform: scale(1.1);
+}
 .place img {
     max-width: 100%;
     height: 250px;
@@ -64,10 +71,14 @@ h3{
     padding-left: 7%;
     border-radius: 5px;
 }
+body{
+    background-image: url('https://i.pinimg.com/474x/6a/9b/ac/6a9bac6d27acf91ee2d021d1a5588301.jpg');
+}
 
 footer {
-    background-color: #333;
-    color: #fff;
+    /* background-color: #929090; */
+    background-image: url('https://i.pinimg.com/474x/07/f5/58/07f5585a6a5f43a2589f4a02cf3ec72f.jpg');
+    color: #161616;
     padding: 20px;
     display: flex;
     justify-content: space-between;
@@ -98,7 +109,7 @@ footer {
 
 .footer-section button {
     padding: 10px;
-    background-color: #555;
+    background-color: #241d1d;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -106,5 +117,5 @@ footer {
 }
 
 .footer-section button:hover {
-    background-color: #777;
+    background-color: #646262;
 }
